--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,22 @@
 
+<style>
+    nav{
+      margin: auto;
+      padding: 1rem 2rem;
+    }
+</style>
+<header>
+
+  <nav class="navbar">
+    <div class="container">
+      <h2>ISUN</h2>
+      <div>
+        <a href="/">Home</a>
+        <a href="/login">Login</a>
+        <a href="/signup">Sign up</a>
+      </div>
+    </div>
+  </nav>
+</header>
 
 <router-outlet></router-outlet>
