--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,9 @@
     <div class="container">
       <h2>ISUN</h2>
       <div>
-        <a href="/">Home</a>
-        <a href="/login">Login</a>
-        <a href="/signup">Sign up</a>
+        <a routerLink="/">Home</a>
+        <a routerLink="/login">Login</a>
+        <a routerLink="/signup">Sign up</a>
       </div>
     </div>
   </nav>
