--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,27 @@
 
+.signup{
+  color: antiquewhite;
+  padding: .3rem;
+  margin-top: 5%;
+}
+
+.signup a{
+  padding: .3rem 1rem;
+
+}
+
+.signup a:hover{
+  padding: .5rem 1.6rem;
+  background: #3e485e;
+  border-radius: 1rem;
+  box-shadow: -.1rem .1rem rgba(22, 23, 22, .5);
+  color: #FFF;
+  transition: 1s;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+
 .example-container mat-form-field + mat-form-field {
   margin-left: 8px;
 }
@@ -40,6 +63,8 @@ mat-form-field, mat-label, .input{
   border: none;
   color: aliceblue;
 }
+
+.btn-submit{}
 
 .example-form{
   align-items: center;
