--- a/src/app/accounts/home-account/home-account.component.html
+++ b/src/app/accounts/home-account/home-account.component.html
@@ -6,14 +6,25 @@
 <mat-card>
   <mat-card-header>
     <div mat-card-avatar></div>
-    <mat-card-title>Shiba Inu</mat-card-title>
-    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    <mat-card-title>Accounts</mat-card-title>
+    <!--<mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
+    <section>
+      <div class="example-button-row">
+        <button mat-button color="primary" [routerLink]="['/account/add']">
+          <mat-icon>add_circle</mat-icon>
+          Add
+        </button>
+        <button mat-button color="accent">Accent</button>
+        <button mat-button color="warn">Warn</button>
+        <button mat-button disabled>Disabled</button>
+      </div>
+    </section>
   </mat-card-header>
   <div mat-card-image></div>
   <mat-card-content>
 
 
-
+ <!---
     <div>
       <h1>Angular 13 HTML Table Example</h1>
       <table class="table">
@@ -42,6 +53,52 @@
         </tbody>
       </table>
     </div>
+
+  -->
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="account">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.account}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="iban">
+      <th mat-header-cell *matHeaderCellDef> Iban </th>
+      <td mat-cell *matCellDef="let element"> {{element.iban}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="balance">
+      <th mat-header-cell *matHeaderCellDef> Balance </th>
+      <td mat-cell *matCellDef="let element"> {{element.currentBalance}} {{element.currency}} </td>
+    </ng-container>
+
+     <!-- Symbol Column -->
+     <ng-container matColumnDef="btn">
+      <th mat-header-cell *matHeaderCellDef> Option </th>
+      <td mat-cell *matCellDef="let element"> <button mat-button [routerLink]="['/account/edit/',element.id]" >
+        <mat-icon>edit</mat-icon>Edit</button> </td>
+     </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+
+
+
 
 
   </mat-card-content>
