--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,3 +24,41 @@
 
 }
 
+.btn-menu{
+  display: none;
+}
+
+.mat-toolbar{
+  background: #111213;
+  color: #949494;
+}
+
+.mat-drawer{
+
+}
+
+.mat-drawer-content{
+
+}
+
+
+
+@media screen and (max-width: 767px) {
+
+  .btn-menu-01{
+    display: none;
+  }
+
+  .btn-menu{
+    display: block;
+  }
+
+  .mat-drawer{
+    display: none;
+  }
+}
+
+@media screen and (max-width: 575px) {
+
+}
+
