--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
           <mat-icon>account_box</mat-icon>
           Accounts
         </button>
-        <mat-menu #aboveMenu="matMenu" yPosition="above">
+        <mat-menu #aboveMenu="matMenu" yPosition="below">
           <button mat-menu-item [routerLink]="['/account/home']">List All</button>
           <button mat-menu-item>Item 2</button>
         </mat-menu>
