--- a/src/app/accounts/home-account/home-account.component.html
+++ b/src/app/accounts/home-account/home-account.component.html
@@ -87,6 +87,12 @@
     </ng-container>
 
     <!-- Symbol Column -->
+    <ng-container matColumnDef="owner">
+      <th mat-header-cell *matHeaderCellDef> Owner</th>
+      <td mat-cell *matCellDef="let element"> {{element.owner}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
     <ng-container matColumnDef="isActive">
       <th mat-header-cell *matHeaderCellDef> Is Active </th>
       <td mat-cell *matCellDef="let element"> {{element.isActive}} </td>
@@ -96,7 +102,7 @@
      <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef> Edit </th>
       <td mat-cell *matCellDef="let element"> <button mat-button [routerLink]="['/account/edit/',element.id]" >
-        <mat-icon>edit</mat-icon>Edit</button>
+        <mat-icon color="primary">edit</mat-icon>Edit</button>
       </td>
      </ng-container>
 
@@ -104,7 +110,7 @@
       <th mat-header-cell *matHeaderCellDef> Remove </th>
 
       <td mat-cell *matCellDef="let element"> <button mat-button (click)="removeAccount(element.id)" >
-        <mat-icon>delete</mat-icon>Remove</button>
+        <mat-icon color="warn">delete</mat-icon>Remove</button>
       </td>
      </ng-container>
 
