--- a/src/app/accounts/home-account/home-account.component.html
+++ b/src/app/accounts/home-account/home-account.component.html
@@ -14,6 +14,7 @@
   </mat-card-header>
   <div mat-card-image></div>
   <mat-card-content>
+
     <button mat-raised-button color="primary" [routerLink]="['/account/add']">
       <mat-icon>add_circle</mat-icon>
       Add
@@ -100,19 +101,31 @@
 
      <!-- Symbol Column -->
      <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef> Edit </th>
-      <td mat-cell *matCellDef="let element"> <button mat-button [routerLink]="['/account/edit/',element.id]" >
-        <mat-icon color="primary">edit</mat-icon>Edit</button>
+      <th mat-header-cell *matHeaderCellDef> # </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-raised-button color="primary" [matMenuTriggerFor]="menu" >Options</button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item [routerLink]="['/account/edit/',element.id]" >
+            <mat-icon color="primary">edit</mat-icon>
+            Edit
+          </button>
+          <button mat-menu-item [routerLink]="['/account/trans/debit/',element.id]" >
+            <mat-icon color="warn">remove_circle_outline</mat-icon>
+            Debit
+          </button>
+          <button mat-menu-item [routerLink]="['/account/trans/credit/',element.id]" >
+            <mat-icon color="basic">add_circle_outline</mat-icon>
+            Credit
+          </button>
+          <mat-divider></mat-divider>
+          <button mat-menu-item (click)="removeAccount(element.id)" >
+            <mat-icon color="warn">delete</mat-icon>
+            Remove
+          </button>
+        </mat-menu>
       </td>
      </ng-container>
 
-     <ng-container matColumnDef="remove">
-      <th mat-header-cell *matHeaderCellDef> Remove </th>
-
-      <td mat-cell *matCellDef="let element"> <button mat-button (click)="removeAccount(element.id)" >
-        <mat-icon color="warn">delete</mat-icon>Remove</button>
-      </td>
-     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
