--- a/src/app/accounts/credit/credit.component.html
+++ b/src/app/accounts/credit/credit.component.html
@@ -1,1 +1,148 @@
-<p>input-transaction works!</p>
+<style>
+  .mat-form-field {
+
+width: 500px;
+}
+
+</style>
+
+<main>
+
+  <div class="container">
+    <!-------  Form to search accounts -->
+
+
+    <form class="example-form" [formGroup]="accountForm" (ngSubmit)="onSubmit()">
+        <div class="title">
+          <h2>Credit account</h2>
+        </div>
+
+        <!----------------------------->
+
+        <mat-form-field appearance="outline">
+          <mat-label>Source account</mat-label>
+          <input matInput type="text"
+            placeholder="Source account"
+            formControlName="sourceAccount"
+            [ngClass]="{ 'is-invalid': submitted && _fC['sourceAccount'].errors }"
+           >
+           <span *ngIf="submitted && _fC['sourceAccount'].errors" class="invalid-feedback">
+            <span *ngIf="_fC['sourceAccount'].errors['required']">The source account is required</span>
+
+            <span *ngIf="_fC['sourceAccount'].errors['maxlength']">
+              The source account must not exceed 13 characters
+            </span>
+            <span *ngIf="_fC['sourceAccount'].errors['minlength']">
+              The source account must have at least 13 characters
+            </span>
+            <span *ngIf="_fC['sourceAccount'].errors['pattern']">
+              This field accepts only numbers as value
+            </span>
+          </span>
+          <!--<mat-hint align="end">{{input.value.length}}/10</mat-hint>-->
+          <mat-icon matSuffix>done</mat-icon>
+        </mat-form-field>
+
+        <!----------------------------------->
+        <mat-form-field appearance="outline">
+          <mat-label>Owner</mat-label>
+          <input matInput placeholder="Owner" type="text"
+          formControlName="owner"
+          [ngClass]="{ 'is-invalid': submitted && _fC['owner'].errors }"
+        >
+          <span *ngIf="submitted && _fC['owner'].errors" class="invalid-feedback">
+            <span *ngIf="_fC['owner'].errors['required']">The owner is required</span>
+            <span *ngIf="_fC['owner'].errors['maxlength']">
+              The owner must not exceed 200 characters
+            </span>
+            <span *ngIf="_fC['owner'].errors['pattern']">
+              This field accepts only characters as value
+            </span>
+          </span>
+          <mat-icon matSuffix>done</mat-icon>
+        </mat-form-field>
+
+        <!----------------------------->
+
+        <mat-form-field appearance="outline">
+          <mat-label>Account number</mat-label>
+          <input matInput type="text"
+            placeholder="Account number"
+            formControlName="account"
+            [ngClass]="{ 'is-invalid': submitted && _fC['account'].errors }"
+           >
+           <span *ngIf="submitted && _fC['account'].errors" class="invalid-feedback">
+            <span *ngIf="_fC['account'].errors['required']">The account number is required</span>
+
+            <span *ngIf="_fC['account'].errors['maxlength']">
+              The account number must not exceed 13 characters
+            </span>
+            <span *ngIf="_fC['account'].errors['minlength']">
+              The account number must have at least 13 characters
+            </span>
+            <span *ngIf="_fC['account'].errors['pattern']">
+              This field accepts only numbers as value
+            </span>
+          </span>
+          <!--<mat-hint align="end">{{input.value.length}}/10</mat-hint>-->
+          <mat-icon matSuffix>done</mat-icon>
+        </mat-form-field>
+
+        <!------------------------------------------------>
+        <mat-form-field appearance="outline">
+          <mat-label>Amount</mat-label>
+          <input matInput placeholder="Amount" type="text"
+          formControlName="amount"
+          [ngClass]="{ 'is-invalid': submitted && _fC['amount'].errors }"
+        >
+          <span *ngIf="submitted && _fC['amount'].errors" class="invalid-feedback">
+            <span *ngIf="_fC['amount'].errors['required']">The amount is required</span>
+          </span>
+          <mat-icon matSuffix>done</mat-icon>
+        </mat-form-field>
+
+        <!----------------------------------->
+        <mat-form-field appearance="outline">
+          <mat-label>Operator</mat-label>
+          <input matInput placeholder="Operator" type="text"
+          formControlName="operator"
+          [ngClass]="{ 'is-invalid': submitted && _fC['operator'].errors }"
+        >
+          <span *ngIf="submitted && _fC['operator'].errors" class="invalid-feedback">
+            <span *ngIf="_fC['operator'].errors['required']">The operator is required</span>
+            <span *ngIf="_fC['operator'].errors['maxlength']">
+              The operator must not exceed 200 characters
+            </span>
+            <span *ngIf="_fC['operator'].errors['pattern']">
+              This field accepts only characters as value
+            </span>
+          </span>
+          <mat-icon matSuffix>done</mat-icon>
+        </mat-form-field>
+
+         <!--  DatePicker -->
+
+         <mat-form-field appearance="outline">
+          <mat-label>Created at</mat-label>
+          <input matInput [matDatepicker]="picker3" formControlName="createdAt"
+          [ngClass]="{ 'is-invalid': submitted && _fC['createdAt'].errors }" [value]="date.value"
+          >
+          <mat-hint>MM/DD/YYYY</mat-hint>
+          <mat-datepicker-toggle matIconSuffix [for]="picker3" disabled="false"></mat-datepicker-toggle>
+          <mat-datepicker #picker3></mat-datepicker>
+
+          <span *ngIf="submitted && _fC['createdAt'].errors" class="invalid-feedback">
+            <span *ngIf="_fC['createdAt'].errors['required']">The data is required</span>
+            <span *ngIf="_fC['createdAt'].errors['maxlength']">
+              The date must not exceed 9 characters
+            </span>
+          </span>
+        </mat-form-field>
+
+
+        <div class="example-button-row">
+          <button mat-raised-button type="submit" color="primary">Submit</button>
+        </div>
+    </form>
+  </div>
+</main>
