--- a/src/app/accounts/home-account/home-account.component.html
+++ b/src/app/accounts/home-account/home-account.component.html
@@ -50,6 +50,28 @@
       </table>
     </div>
 
+
+
+
+    <form class="example-form">
+      <mat-form-field class="example-full-width">
+        <mat-label>Number</mat-label>
+        <input type="text"
+               placeholder="Pick one"
+               aria-label="Number"
+               matInput
+               [formControl]="myControl"
+               [matAutocomplete]="auto">
+        <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+          <mat-option *ngFor="let option of filteredOptions | async" [value]="option.account"
+          >
+            {{option.account}}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+    </form>
+
+
   -->
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
