--- a/src/app/accounts/edit-account/edit-account.component.html
+++ b/src/app/accounts/edit-account/edit-account.component.html
@@ -10,7 +10,7 @@ width: 500px;
   <div class="container">
     <form class="example-form" [formGroup]="accountForm" (ngSubmit)="onSubmit()">
       <div class="title">
-        <h2>Regist new account</h2>
+        <h2>Update account data</h2>
       </div>
       <mat-form-field appearance="outline">
         <mat-label>Account number</mat-label>
