--- a/src/app/accounts/debit/debit.component.html
+++ b/src/app/accounts/debit/debit.component.html
@@ -1,17 +1,38 @@
-<form class="example-form">
-  <mat-form-field class="example-full-width">
-    <mat-label>Number</mat-label>
-    <input type="text"
-           placeholder="Pick one"
-           aria-label="Number"
-           matInput
-           [formControl]="myControl"
-           [matAutocomplete]="auto">
-    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-      <mat-option *ngFor="let option of filteredOptions | async" [value]="option.owner"
-      >
-        {{option.owner}}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
-</form>
+
+<style>
+  .mat-form-field {
+
+width: 500px;
+}
+
+</style>
+
+<main>
+
+  <div class="container">
+    <!-------  Form to search accounts -->
+
+
+
+  <form class="example-form">
+    <mat-form-field class="example-full-width">
+      <mat-label>Number</mat-label>
+      <input type="text"
+            placeholder="Pick one"
+            aria-label="Number"
+            matInput
+            [formControl]="myControl"
+            [matAutocomplete]="auto">
+      <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+        <mat-option *ngFor="let option of filteredOptions | async" [value]="option.owner"
+        >
+          {{option.owner}}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+  </form>
+
+
+
+  </div>
+</main>
